corrected portfolio alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ footer {
 
 #button{
     background-color: #777777;
-    font-size: 15px;
+    font-size: 1em;
     padding: 8px;
     /* width: 100px; */
     color: #ffffff;
@@ -106,84 +106,84 @@ footer {
 
 
 .button1{
-    position: absolute;
-    margin-bottom: 5%;
-    margin-right: 30px;
+    position: absolute;  
+    margin-bottom: 5%; 
+    margin-right: 3em;
 }
 
 .button2{
     position: relative;
-    left: 250px;
+    left: 15em;
     margin-bottom: 5%;
-    margin-right: 30px;
+    margin-right: 3em;
 }
 
 .button3{
     position: absolute;
     margin-bottom: 5%;
-    margin-right: 30px;
+    margin-right: 3em;
 }
 
 .button4{
     position: relative;
     top: 0%;
-    left: 250px;
+    left: 15em;
     margin-bottom: 5%;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
 .button5{
     position: relative;
     margin-bottom: 5%;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
 .textblock1{
     position: absolute;
-    top: 138px;
     text-align: center;
+    top: 70%;
     background-color: #777777;
     color:#ffffff;
-    /* width: 200px; */
+    width: 100%;
     opacity: 0.9; 
 }
 
 .textblock2{
     position: absolute;
-    top: 70px;
+    top: 70%;
     text-align: center;
     background-color: #777777;
     color:#ffffff;
-    /* width: 200px; */
+    width: 100%;
     opacity: 0.9; 
 }
 
 .textblock3{
     position: absolute;
     text-align: center;
-    top: 138px;
+    top: 70%;
     background-color: #777777;
     color:#ffffff;
-    /* width: 200px; */
+    width: 100%;
     opacity: 0.9; 
 }
 
 .textblock4{
     position: absolute;
     text-align: center;
-    top: -70px;
+    top: 70%;
     background-color: #777777;
     color:#ffffff;
-    /* width: 200px; */
+    width: 100%;
     opacity: 0.9; 
 }
 
 .textblock5{
     position: absolute;
     text-align: center;
-    top: -70px;
+    top: 70%;
     background-color: #777777;
     color:#ffffff;
-    /* width: 200px; */
+    width: 100%;
     opacity: 0.9; 
 }
